# convpool

./: CMakeLists.txt  README.md
cmake/: FindMKL.cmake
include/: layer.cuh  neuron.cuh  weights.cuh
include/cudaconv2/: conv_util.cuh  cudaconv2_extra.cuh
include/nvmatrix/: nvmatrix.cuh
src/: convnet.cu  layer.cu  layer_extra.cu  pyconvnet.cu  worker.cu
src/cudaconv2/: #filter_acts.cu#  #weight_acts_extra2.cu#  conv_util.cu  conv_util_extra.cu  conv_util_extra.cu~  filter_acts.cu  filter_acts_extra.cu  img_acts_extra.cu  img_acts_extra.cu~  weight_acts_extra.cu
src/nvmatrix/: nvmatrix.cu
test/: main.cu
